<resources>
    <string name="app_name">Photos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="option_header">Options</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">You can change images View</string>
    <string name="folder_summary">Select the Folder of images you wish to view </string>
    <string name="image_folder_title">Images Folder</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync your Photos periodically</string>
    <string name="photo_title">Automatically download unsynced Photos</string>
    <string name="photo_summary_on">Download on mobile data and wifi
    </string>
    <string name="photo_summary_off">Only download and upload On Wifi </string>
</resources>